--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Artists#index</h1>
-<p>Find me in app/views/artists/index.html.erb</p>
+<h1>All Artists</h1>
+<table>
+    <% @artists.each do |artist| %>
+    <tr>
+        <td><%= artist.id %></td>
+        <td><%= artist.name %> </td>
+    </tr>
+    <% end %>
+    
+</table>
