--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,14 +2,16 @@
 <table class="table-responsive highlight">
     <thead>
         <tr>
+            <th>Image</th>
             <th><%= sortable "id" %></th>
             <th><%= sortable "name" %></th>
             <th><%= sortable "created_at" %></th>
         </tr>
     </thead>
-    <% @artists.each do |artist| %>
+    <% @artists.each do |artist, id| %>
     <tr>
-        <td><%= artist.id %></td>
+        <td><img src="<%= artist.image_url %>" class="circle"/></td>
+        <td><%= link_to artist_path(artist) do %><%= artist.id %><% end %></td>
         <td><%= artist.name %></td>
         <td><%= artist.created_at %></td>
     </tr>
